# zani

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  DEPLOYMENT.md  Dockerfile  GITHUB_ACTIONS.md  INVENTORY_EXPLAINED.md  Makefile  README.md  SETUP_SUMMARY.md  VARIABLES.md  ansible.cfg  deploy.sh  deploy.yml  docker-compose.yml  inventory.ini  pom.xml  requirements.yml
.github/workflows/: deploy-image.yml  maven.yml
config/: sexo.toml  sexo.yml
group_vars/: all.yml  development.yml  production.yml
host_vars/: localhost.yml
src/: commands.rs  database.rs  handlers.rs  main.rs  models.rs  utils.rs
src/main/java/af/camp/sexo/: Listener.java  Sexo.java  YamlConfig.java
src/main/java/af/camp/sexo/db/: DatabaseEngine.java
src/main/java/af/camp/sexo/user/: User.java  UserLevel.java
src/main/java/sh/cocaine/: BotUser.java  Listener.java  User.java
src/main/java/sh/cocaine/sexo/: BotUser.java  Listener.java  Sexo.java  YamlConfig.java
src/main/java/sh/cocaine/sexo/db/: DatabaseEngine.java
src/main/java/sh/cocaine/sexo/user/: User.java  UserLevel.java
templates/: sexo.toml.j2
