[package]
name = "sexo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
irc = "1.0.0"
reqwest = { version = "0.11", features = ["default"] }
regex = "1.10"
rusqlite = { version = "0.34.0", features = ["bundled"] }
scraper = "0.18"
tokio = { version = "1.44", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
] }
